[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/entities/Projectile.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "fire_loop"

[sub_resource type="Animation" id=3]
resource_name = "fire_start"

[sub_resource type="Animation" id=2]
resource_name = "hit"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_remove"
} ]
}

[node name="Projectile" type="Node2D"]
z_as_relative = false
script = ExtResource( 1 )

[node name="LifetimeTimer" type="Timer" parent="."]

[node name="ProjectileAnimations" type="AnimationPlayer" parent="."]
anims/fire_loop = SubResource( 1 )
anims/fire_start = SubResource( 3 )
anims/hit = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
